# FightTimer

./: .env.example  .gitignore  .replit  API_DOCUMENTATION.md  Dockerfile  README.md  apiinfo.txt  app.py  docker-compose.yml  font_manager.py  main.py  pyproject.toml  requirements.txt  timer_manager.py  update-container.sh
.github/workflows/: docker-build.yml
.kiro/specs/multi-timer-support/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  rules.md  structure.md  tech.md
.planning/: firmware-timer-state-spec.md
.planning/todos/pending/: 2026-03-15-poll-hardware-timer-and-sync-web-display.md
static/css/: styles.css
static/js/: mode_selection.js  timer.js  websocket.js
templates/: control.html  index.html  mode_selection.html  timer_1.html  timer_2.html  timer_3.html  timer_4.html  timer_5.html
